--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,25 @@
-<h1 class="main-title"> Post</h1>
-<div class="row range">
-  <% @posts.each do |post| %>
-    <div class="col-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><%= post.title %></h5>
-          <p class="card-text"><%= post.content %></p>
-        </div>
-      </div>
-    </div>
-    <td><%= link_to 'show', post_path(post) %></td>
-  <% end %>
-</div>
+<div class="container">
+  <h1>Post</h1>
 
-<%= link_to 'Tao moi', new_post_path %>
+  <table class="table">
+    <thead>
+      <tr>  
+        <th> Title </th>
+        <th> Content </th>
+      </tr>  
+    </thead>
+    <tbody>
+        <% @posts.each do |post| %>
+          <tr>
+            <td><%= post.title %></td>
+            <td><%= post.content %><td>
+            <td><%= link_to 'Show', post %>
+            <td><%= link_to 'Edit', edit_post_path(post) %>
+            <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </tr>
+        <% end %>
+
+    <tbody>    
+  </table>
+  <%= link_to 'Tao moi', new_post_path %>
+</div>
