--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,5 @@
-new form
+<div class="container">
+  <h1> NEW FORM </h1>
+  <%= render 'form', post: @post %>
+  <%= link_to 'Back', posts_path %>
+</div>
